# dagster_boilerplate

./: .gitignore  README.md  pyproject.toml
dedicate_user_code/: Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
dedicate_user_code/my_pipeline/: __init__.py
dedicate_user_code/src/my_pipeline/assets/: restuarant.py
deployment/: Dockerfile  dagster.yaml  docker-compose.yaml  workspace.yaml
src/dagster_entry/: __init__.py
src/data_pipeline/assets/arm_code/: clean_poi.py
src/data_pipeline/assets/example_a/: dataset.py  poi.py
src/data_pipeline/assets/example_b/: ml.py  ml_multi_models.py  service_area.py
